--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +10,12 @@
 <body>
     <header>
         <div class="logo-container">
-          <a href="index.html"><img src="1726.jpg"></a>
+          <a href="index.html"><img class="imgLogo" src="imagens/logo.png"></a>
         </div>
+
         <div class="links-container">
-          <a href="login">Login</a>
-          <a href="menu">Menu</a>
+          <a href="login"><img class="login" src="imagens/login.png"></a>
+          <a href="menu"><img class="menu" src="imagens/menu.png"></a>
         </div>
       </header>
       
@@ -44,7 +45,9 @@
         <a href=""><img class="barraImagens" src="imagens/torre-eiffel.jpg"></a>
         <a href=""><img class="barraImagens" src="imagens/ponteEUA.jpg"></a>
     </div>
-
+    <div>
+        <p class="destino">Seu próximo destino é com a Flymoon</p>
+    </div>
     <footer>
         <div>
             <img src="lule(1).jpeg"> 
