Modificações no css e html, ajustando espaçamento entre as divs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="menu"><img class="menu" src="imagens/menu.png"></a>
         </div>
       </header>
-      <a href=""><img style="width:1400px" src="imagens/aviaoBarra.jpg"></a>
+      <a href=""><img class="imgMeio" src="imagens/aviaoBarra.jpg"></a>
 
  <!--   <div class="formIndex">
         <form class="forms" action="" method="post">
@@ -44,14 +44,25 @@
     <div class="textoMeio">
         <p>A Flymoon foi criada para você. <br>Uma empresa com diversos preços acessíveis para lugares incríveis.</p>
     </div>
-    <div class="imagens-voo">
-        <a href=""><img class="barraImagens" src="imagens/rio-de-janeiro.jpg"></a>
-        <a href=""><img class="barraImagens" src="imagens/torre-eiffel.jpg"></a>
-        <a href=""><img class="barraImagens" src="imagens/ponteEUA.jpg"></a>
-    </div>
+
+        <div class="div-cristo">
+        <a href=""><img class="imagem-cristo" src="imagens/rio-de-janeiro.jpg"></a>
+        <p style="font-size:30px; margin-left: 30px; margin-top:70px">Uma das vistas mais lindas do Brasil. Uma viagem muito especial e acessivel que a Flymoon me proporcionou - Aline Campos</p>
+        </div>
+
+        <div class="div-torre">
+        <img class="imagem-torre" src="imagens/torre-eiffel.jpg">
+        <p style="float:left">AAAAA</p>
+        </div>
+        
+        <div class="div-ponte">
+        <a href=""><img class="imagem-ponte" src="imagens/ponteEUA.jpg"></a>
+        <p>AAAAA</p>
+        </div>
+
     
-    <div>
-        <p class="destino">Seu próximo destino é com a Flymoon</p>
+    <div class="destino">
+        <p>Seu próximo destino é com a Flymoon</p>
     </div>
   
     <footer>      
